fixed banner controls and mobile search overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11212,19 +11212,9 @@ span {
   height: 100vh;
   overflow-x: hidden;
   position: relative;
-  padding-top: 1.25rem;
   flex-direction: column;
   justify-content: start !important;
   align-items: center;
-  /* For some reason using flexbox pushes some elements out of their parent containers
-   * E.g. the mobile search bar is pushed out of the header, and the header margin 
-   * doesn't include it even though in the html it's part of the header  
-  */
-}
-@media (min-width: 768px) {
-  .full-page {
-    padding-top: 1.25rem;
-  }
 }
 
 .inner {
@@ -11246,7 +11236,7 @@ span {
   }
 }
 
-.row, .card-wrapper {
+.row, .card-wrapper .wrapper {
   padding: 0;
   margin: 0;
 }
@@ -11427,6 +11417,7 @@ h6 {
 header {
   position: relative;
   width: 100%;
+  padding-top: 1.25rem;
 }
 @media (max-width: 768px) {
   header {
@@ -11550,7 +11541,7 @@ header {
 }
 .search-sm .input-container .input-field {
   padding: 0.313rem 2.5rem 0.313rem 0.938rem;
-  width: 763px !important;
+  width: 100% !important;
   background-color: rgba(0, 0, 0, 0.1);
   outline: 1px solid rgba(255, 255, 255, 0.2);
   border: 2px solid rgba(0, 0, 0, 0.1);
@@ -12030,7 +12021,6 @@ header {
   position: relative;
   flex-direction: column;
   width: 100%;
-  max-height: 100vh;
 }
 @media (max-width: 576px) {
   .banner {
@@ -12066,14 +12056,14 @@ header {
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: 2;
+    z-index: 1;
     background: rgba(0, 0, 0, 0.1);
   }
 }
 .banner img {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
 }
 
@@ -12081,7 +12071,7 @@ header {
 .banner-content {
   position: absolute;
   justify-content: start !important;
-  z-index: 3;
+  z-index: 2;
   height: 100%;
 }
 
@@ -12126,7 +12116,7 @@ header {
 /* ------------------------------ Owl Controls ------------------------------ */
 .owl-controls {
   position: absolute;
-  bottom: 10%;
+  bottom: calc(10% + 5vw);
   width: 100%;
   height: fit-content;
   color: white;
