--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -5,6 +5,8 @@
 header {
     position: relative;
     width: 100%;
+    padding-top: 1.25rem; //20px
+    
     
     @include respond-to-down(sm) {
         @include headerSpacing;        // Separates mobile search from banner
@@ -153,7 +155,7 @@ header {
         
         .input-field {
             padding: 0.313rem 2.5rem 0.313rem 0.938rem; // 5px 40px 5px 15px
-            width: 763px !important;
+            width: 100% !important;
             //Background Coloring
             background-color: rgba(0,0,0,.1);
             outline: 1px solid hsla(0,0%,100%,.2);
