--- a/scss/sections/_services-banner.scss
+++ b/scss/sections/_services-banner.scss
@@ -13,7 +13,6 @@
     position: relative;
     flex-direction: column;
     width: 100%;
-    max-height: 100vh; 
     // border: 3px solid indianred;
     
     @include respond-to-down(xs) {
@@ -54,7 +53,7 @@
             right: 0;
             top: 0;
             bottom: 0;
-            z-index: 2;
+            z-index: 1;
             background:rgba(0, 0, 0, 0.1);
         }
     }
@@ -63,8 +62,10 @@
     img { //Image now scales down when screen size is reduxed for some reason
         position: relative;
         width: 100%;
-        height: 100%;
+        height: 100vh; // use vh so it can cover height on large screens
         object-fit: cover;
+        
+        
         
         // border: 3px solid yellowgreen;
     }
@@ -75,23 +76,19 @@
 .banner-content {
     position: absolute;
     justify-content: start !important;
-    z-index: 3; //places image above shadow overlay
+    z-index: 2; //places image above shadow overlay
     height: 100%;
     // border: 2px solid darkgoldenrod;
 }
 
 // Contains description & button
 .banner-info {
-    color: $white !important;    
+    color: $white !important;
     padding: 0 0.625rem; //10px
     flex-direction: column; //places button under text
     height: 100%;
     // border: 2px solid white;
-    
-    //Want to make container fit content only but then "margin: auto 0" doesn't work
-    // height: fit-content; 
-    // margin: auto 0; 
-    
+
     // Align content to left above 992px
     @include respond-to-up(md) {
         align-items: start;
@@ -134,7 +131,7 @@
 /* ------------------------------ Owl Controls ------------------------------ */
 .owl-controls {
     position: absolute;
-    bottom: 10%; //controls height of buttons
+    bottom: calc(10% + 5vw); // increase height for every +5vw
     width: 100%;
     height: fit-content;
     color: white;
